<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jbd.ju2.ProfilActivity"
    tools:showIn="@layout/app_bar_profil">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/photo_profil2" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingLeft="10dp">
                <TextView
                    android:text="@string/kevin_whells"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:id="@+id/nomUser" />

                <TextView
                    android:text="@string/_3dboardcafe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:id="@+id/textView2" />

                <TextView
                    android:text="@string/_32_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:id="@+id/ageUser" />
            </LinearLayout>
            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_follow"
                android:onClick="" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interets"
        android:textSize="18dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_cat_jsociete"
                android:background="@color/catJSociete"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_cat_bar"
                android:background="@color/catSoiree"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/catSport"
                app:srcCompat="@drawable/ic_cat_sport" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                app:srcCompat="@drawable/ic_cat_concert"
                android:background="@color/catConcert" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evenements_cr_s"
        android:textSize="18dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:layout_marginBottom="10dp"
        android:background="@color/catSoiree">

        <TableRow>

            <TextView
                android:id="@+id/e0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/ouverture_de_l_alibi" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_cat_bar" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:layout_marginBottom="10dp"
        android:background="@color/catJSociete"
        android:id="@+id/eu1">

        <TableRow>

            <TextView
                android:id="@+id/e1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/loups_garous" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_cat_jsociete" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:layout_marginBottom="10dp"
        android:background="@color/catJSociete">

        <TableRow>

            <TextView
                android:id="@+id/e2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/loups_garous" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_cat_jsociete" />

        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Participations"
        android:textSize="18dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"/>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0"
        android:layout_marginBottom="10dp"
        android:background="@color/catSoiree">

        <TableRow>

            <TextView
                android:id="@+id/ec2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="Nouvel an 2017" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingRight="5dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_cat_bar" />

        </TableRow>
    </TableLayout>


</LinearLayout>
